2002-06-07  Bruno Haible  <bruno@clisp.org>

	* msgfmt.c (install_sigfpe_handler): Assume the signal is always
	SIGFPE, regardless of the platform.
	(uninstall_sigfpe_handler): Likewise.

2002-05-29  Bruno Haible  <bruno@clisp.org>

	* dir-list.h (dir_list_save_reset, dir_list_restore): New declarations.
	* dir-list.c (dir_list_save_reset, dir_list_restore): New functions.
	* xgettext.c (main): Temporarily reset the dir_list while opening
	reading the contents of the output file.
	Reported by Mark Eichin <eichin@thok.org>.

2002-05-22  Bruno Haible  <bruno@clisp.org>

	* msgl-iconv.h (iconv_message_list): Add from_filename argument.
	(iconv_msgdomain_list): Likewise.
	* msgl-iconv.c (iconv_message_list): Add from_filename argument.
	Don't give an error for POT files containing charset=CHARSET.
	(iconv_msgdomain_list): Add from_filename argument.
	* msgl-cat.c (catenate_msgdomain_list): Don't give an error for
	POT files containing charset=CHARSET. Pass input file name to
	iconv_message_list.
	* msgconv.c (main): Pass input file name to iconv_msgdomain_list.
	* write-java.c (msgdomain_write_java): Update.
	* write-tcl.c (msgdomain_write_tcl): Update.
	* x-glade.c (do_extract_glade): Update.
	* x-python.c (extract_python): Update.
	* x-tcl.c (extract_tcl): Update.

2002-05-18  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (RM): New variable.
	(install-exec-am): Depend on install-exec-clean.
	(install-exec-clean): New rule.

2002-05-14  Bruno Haible  <bruno@clisp.org>

	* write-po.c (wrap): Canonicalize the charset. Handle the case when
	po_charset_canonicalize returns NULL.
	Reported by Jan-Marek Glogowski <glogow@stud.fbi.fh-darmstadt.de>.

2002-05-12  Bruno Haible  <bruno@clisp.org>

	* po-charset.c (po_charset_canonicalize): Add ISO-8859-14, KOI8-T,
	GEORGIAN-PS to the list of allowed encodings.

2002-04-30  Bruno Haible  <bruno@clisp.org>

	* hostname.c (ipv6_ntop): Provide a fallback definition for systems